@@ -17,6 +17,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <all.clusters>${D}{project.build.directory}/${D}{brandingToken}</all.clusters>
+        <jpms-flags>
+            -Djava.security.manager=allow
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            <!-- add more "add opens" if needed -->
+        </jpms-flags>
     </properties>
 
     <dependencies>
@@ -31,22 +36,12 @@
             <artifactId>${artifactId}-branding</artifactId>
             <version>${D}{project.version}</version>
         </dependency>
-        <!-- NbModuleSuite functional in RELEASE70 or later: -->
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-netbeans-modules-nbjunit</artifactId>
             <version>${D}{netbeans.version}</version>
             <scope>test</scope> <!-- beyond platform cluster, this often needs to be dropped down to compile/runtime, some other modules in IDE clusters depend on it -->
         </dependency>
-#if (${netbeansVersion} == "RELEASE71")
-        <!-- Cf.: https://netbeans.org/bugzilla/show_bug.cgi?id=207956 -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-#end
         <!-- To use Jelly Tools in your functional tests, add or replace with:
         <dependency>
             <groupId>org.netbeans.api</groupId>
@@ -67,19 +62,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.2</version>
+                <version>3.3.0</version>
                 <configuration>
-#if (${netbeansVersion} == "RELEASE70" || ${netbeansVersion} == "RELEASE701")
-                    <!-- For RELEASE70 or RELEASE701 only (adding in any other clusters imported by your app); RELEASE71+ uses all.clusters directly, plus branding.token: -->
-                    <systemPropertyVariables>
-                        <cluster.path.final>${D}{all.clusters}/${D}{brandingToken}:${D}{all.clusters}/platform</cluster.path.final>
-                    </systemPropertyVariables>
-#else
+                    <argLine>${jpms-flags}</argLine>
                     <systemPropertyVariables>
                         <all.clusters>${D}{all.clusters}</all.clusters>
                         <branding.token>${D}{brandingToken}</branding.token>
                     </systemPropertyVariables>
-#end
                 </configuration>
             </plugin>
         </plugins>
@@ -98,7 +87,6 @@
                                 <id>extra</id>
                                 <goals>
                                     <goal>autoupdate</goal>
-                                    <goal>webstart-app</goal>
                                     <goal>build-installers</goal>
                                 </goals>
                             </execution>
